--- a/mysite/accountant/templates/accountant/index.html
+++ b/mysite/accountant/templates/accountant/index.html
@@ -1,6 +1,5 @@
-{% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
 <ul>
-<li><a href="{% url 'polls:detail' question.id %}">{{ 添加配料单 }}</a></li>
+   <li><a href="/admin/accountant/burdensheet/">配料单列表</a></li>
+   <li><a href="/admin/accountant/productpurchase/">购原料列表</a></li>
 </ul>
