--- a/mysite/accountant/templates/accountant/index.html
+++ b/mysite/accountant/templates/accountant/index.html
@@ -2,4 +2,6 @@
 <ul>
    <li><a href="/admin/accountant/burdensheet/">配料单列表</a></li>
    <li><a href="/admin/accountant/productpurchase/">购原料列表</a></li>
+   <li><a href="/admin/accountant/income/">收入列表</a></li>
+   <li><a href="/admin/accountant/expense/">支出列表</a></li>
 </ul>
